Eurekaserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: sampath5/eurekaserver:1
        ports:
        - containerPort: 8176
      
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver
  labels:
    app: eurekaserver
spec:
  type: NodePort
  ports:
  - port: 8176
    protocol: TCP
    targetPort: 8176
    nodePort: 32120
  selector:
    app: eurekaserver
