orderdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: sampath5/otemp:1
        ports:
        - containerPort: 8081
       
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  type: NodePort
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
    nodePort: 32121
  selector:
    app: orderservice
