paymentservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: sampath5/paymentservice:1
        ports:
        - containerPort: 8082
       volumeMounts:
         -name: paymentconfig-volume
          mountPath: etc/config
      volumes:
        -name: paymentconfig-volume
         configMap: 
           name: paymentconfig
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  labels:
    app: paymentservice
spec:
  type: NodePort
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
    nodePort: 32122
  selector:
    app: paymentservice
