thirdpartydeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thirdpartyservice
  labels:
    app: thirdpartyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thirdpartyservice
  template:
    metadata:
      labels:
        app: thirdpartyservice
    spec:
      containers:
      - name: thirdpartyservice
        image: sampath5/thirdpartyservice:1
        ports:
        - containerPort: 8083
        
---
apiVersion: v1
kind: Service
metadata:
  name: thirdpartyservice
  labels:
    app: thirdpartyservice
spec:
  type: NodePort
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
    nodePort: 32123
  selector:
    app: thirdpartyservice
